--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,9 @@ services:
       - .:/app
       - app_bundle:/usr/local/bundle
     tty: true
+    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    ports:
+      - 3000:3000
     depends_on:
       - db
     links:
